--- a/ForeignLanguagesSchool/SharedKernel/SharedKernel.csproj
+++ b/ForeignLanguagesSchool/SharedKernel/SharedKernel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5CC58A9A-3B52-4C21-B9B8-B9544DA8E354}</ProjectGuid>
+    <ProjectGuid>{D1A19A99-E25A-4C0D-AEB0-81E88A16EE5F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AppointmentScheduling.Core</RootNamespace>
-    <AssemblyName>AppointmentScheduling.Core</AssemblyName>
+    <RootNamespace>SharedKernel</RootNamespace>
+    <AssemblyName>SharedKernel</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\ScheduleAggregate\Appointment.cs" />
+    <Compile Include="DateTimeRange.cs" />
+    <Compile Include="Entity.cs" />
+    <Compile Include="Guard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SharedKernel\SharedKernel.csproj">
-      <Project>{D1A19A99-E25A-4C0D-AEB0-81E88A16EE5F}</Project>
-      <Name>SharedKernel</Name>
-    </ProjectReference>
+    <Compile Include="ValueObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
