--- a/WebShop/WebShop.Notification.Api/WebShop.Notification.Api.csproj
+++ b/WebShop/WebShop.Notification.Api/WebShop.Notification.Api.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebApiConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
