--- a/InterfaceContextConstraints/TaxiManager.Models/TaxiManager.Models.csproj
+++ b/InterfaceContextConstraints/TaxiManager.Models/TaxiManager.Models.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2AB0C8BA-FF6D-4931-93CF-AE59B8182BF3}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>InterfaceContextConstraints.ConsoleClient</RootNamespace>
-    <AssemblyName>InterfaceContextConstraints.ConsoleClient</AssemblyName>
+    <ProjectGuid>{CAA41DFD-CCFF-4DFA-B688-715084466C8D}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>TaxiManager.Models</RootNamespace>
+    <AssemblyName>TaxiManager.Models</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,11 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="Station.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\TaxiManager.Interfaces\TaxiManager.Interfaces.csproj">
+      <Project>{4D7B42B1-4ECD-4364-93DF-051B797A3BDF}</Project>
+      <Name>TaxiManager.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
